[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Player/Helmet/Helmet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/TutorialWorld/TutorialWorld.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/TutorialScene/TutorialScene.gd" type="Script" id=3]
[ext_resource path="res://Assets/Originals/SFX/LowRumble/LowRumbleLoop.ogg" type="AudioStream" id=4]
[ext_resource path="res://Scripts/InteractionController.gd" type="Script" id=8]
[ext_resource path="res://Assets/Originals/Music/Moon_Tunes_-_GWJM.mp3" type="AudioStream" id=9]

[node name="TutorialScene" type="Node"]
script = ExtResource( 3 )

[node name="WorldContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
script = ExtResource( 8 )

[node name="Viewport" type="Viewport" parent="WorldContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3
audio_listener_enable_3d = true
shadow_atlas_size = 1024

[node name="TutorialWorld" parent="WorldContainer/Viewport" instance=ExtResource( 2 )]

[node name="HelmetViewport" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch = true

[node name="Viewport" type="Viewport" parent="HelmetViewport"]
size = Vector2( 1024, 600 )
own_world = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Helmet" parent="HelmetViewport/Viewport" instance=ExtResource( 1 )]

[node name="AudioPlayers" type="Node" parent="."]

[node name="LowRumble" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource( 4 )
autoplay = true
bus = "SFX"

[node name="Music" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource( 9 )
volume_db = -10.0
autoplay = true
bus = "Music"

[connection signal="human_died" from="WorldContainer/Viewport/TutorialWorld" to="." method="_on_TutorialWorld_human_died"]
[connection signal="message_logged" from="WorldContainer/Viewport/TutorialWorld" to="." method="_on_TutorialWorld_message_logged"]
[connection signal="objective_added" from="WorldContainer/Viewport/TutorialWorld" to="." method="_on_TutorialWorld_objective_added"]
[connection signal="player_camera_x_rotated" from="WorldContainer/Viewport/TutorialWorld" to="." method="_on_TutorialWorld_player_camera_x_rotated"]
[connection signal="player_camera_y_reset" from="WorldContainer/Viewport/TutorialWorld" to="." method="_on_TutorialWorld_player_camera_y_reset"]
[connection signal="player_camera_y_rotated" from="WorldContainer/Viewport/TutorialWorld" to="." method="_on_TutorialWorld_player_camera_y_rotated"]
[connection signal="player_left_foot_grounded" from="WorldContainer/Viewport/TutorialWorld" to="." method="_on_TutorialWorld_player_left_foot_grounded"]
[connection signal="player_oxygen_updated" from="WorldContainer/Viewport/TutorialWorld" to="." method="_on_TutorialWorld_player_oxygen_updated"]
[connection signal="player_right_foot_grounded" from="WorldContainer/Viewport/TutorialWorld" to="." method="_on_TutorialWorld_player_right_foot_grounded"]
[connection signal="succeeded" from="WorldContainer/Viewport/TutorialWorld" to="." method="_on_TutorialWorld_succeeded"]
[connection signal="start_asphyxiation" from="HelmetViewport/Viewport/Helmet" to="." method="_on_Helmet_start_asphyxiation"]
[connection signal="stop_asphyxiation" from="HelmetViewport/Viewport/Helmet" to="." method="_on_Helmet_stop_asphyxiation"]
